# QuantV2

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
configs/: costs.yaml  data.yaml  strategy_event_reaction.yaml  universe.yaml
src/quantv2/backtest/: costs.py  simulator.py  walk_forward.py
src/quantv2/data/: diagnostics.py  event_data.py  market_data.py
src/quantv2/evaluation/: metrics.py  prediction_metrics.py  reports.py
src/quantv2/experiments/: cli.py  registry.py  run_experiment.py
src/quantv2/features/: event_features.py  feature_matrix.py  price_features.py
src/quantv2/labels/: forward_returns.py
src/quantv2/models/: rule_baseline.py
tests/: test_bootstrap.py  test_costs.py  test_diagnostics.py  test_event_data.py  test_event_features.py  test_experiment_cli.py  test_feature_matrix.py  test_forward_returns.py  test_market_data.py  test_metrics.py  test_prediction_metrics.py  test_price_features.py  test_registry.py  test_reports.py  test_rule_baseline.py  test_run_baseline_experiment.py  test_run_experiment.py  test_run_saved_experiment.py  test_simulator.py  test_walk_forward.py
