[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantv2"
version = "0.1.0"
description = "Event-driven equity quant research system"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
